fix collapsed nav tabs

--- a/sass/components/tabs.scss
+++ b/sass/components/tabs.scss
@@ -5,32 +5,57 @@
 }";
 
 // Added
-.is-collapse-enabled .primary {
-  position: relative;
+.is-collapse-enabled {
+  .primary {
+    position: relative;
+  }
+
+  .tabs {
+    padding-top: 39px;
+  }
+
+  .tabs__trigger {
+    font-size: 1rem;
+    line-height: 20px; // Line height hack to display bottom border.
+  }
+
+  .tabs.primary .tabs__tab.is-active {
+    border-bottom: 1px solid $gray-lightest;
+  }
+  .tabs.primary.is-open .tabs__tab.is-active {
+    border-bottom-color: $primary-color-intense;
+  }
 }
 
 .tabs__tab {
   border: 1px solid $primary-color-intense;
   background-color: $primary-color-lighter;
+  
+  // Removed :focus since this hover is same as active.
+  &:focus {
+    background-color: $primary-color-lighter;
+  }
+
+  &:hover {
+    color: $primary-color-intense;
+    background-color: $gray-lightest;
+  }
 }
 
-.tabs__tab:hover,
-.tabs__tab:focus {
-  color: $primary-color-intense;
-  background-color: $gray-lightest;
+// Primary tabs
+.tabs.primary {
+
+  .tabs__tab.is-active {
+    border-color: $primary-color-intense;
+    background-color: $gray-lightest;
+  }
+
+  a {
+    text-transform: uppercase;
+  }
 }
 
-/* Primary tabs */
-.tabs.primary .tabs__tab.is-active {
-  border-color: $primary-color-intense;
-  background-color: $gray-lightest;
-}
-
-.tabs.primary a {
-  text-transform: uppercase;
-}
-
-@media screen and (min-width: 18.75em) { /* 300px */
+@media screen and (min-width: 18.75em) { // 300px
   .tabs.primary a {
     background: url(../../images/icons/chevron-right.svg) 99% center no-repeat;
   }
@@ -74,10 +99,10 @@
   font-size: 12px; // added
 }
 
-/* Secondary tabs */
+// Secondary tabs
 .tabs.secondary .tabs__tab.is-active {
   color: $primary-color-intense;
-  border-left: 2px solid $primary-color-intense; /* LTR */
+  border-left: 2px solid $primary-color-intense; // LTR
 }
 
 .tabs.secondary .tabs__tab + .tabs__tab {
@@ -103,11 +128,6 @@
   border-left-color: transparent;
 }
 
-.is-horizontal .tabs.secondary .tabs__tab.is-active, // added
-.is-horizontal .tabs.secondary .tabs__tab:hover,
-.is-horizontal .tabs.secondary .tabs__tab:focus {
-  border-bottom-color: $primary-color-intense;
-}
 
 .is-horizontal {
   text-align: right;
@@ -144,3 +164,4 @@
     }
   }
 }
+// */
